Name:		hxournal
Version:	0.6.4.0
Synopsis:	A pen notetaking program written in haskell 
Description: 	notetaking program written in haskell and gtk2hs
Homepage:       http://ianwookim.org/hxournal
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.0
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     template/*.html.st
                resource/*.png
                CHANGES
                Config.hs
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hxournal

Flag Poppler
  Description: Enable poppler support
  Default:     True

Executable hxournal
  Main-is: hxournal.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                 base>4, 
                 cmdargs >= 0.7 && <= 0.10, 
                 hxournal 

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all

  if flag(poppler) 
    Build-Depends:   base == 4.*, 
                     mtl == 2.*,
                     directory == 1.*,
                     filepath == 1.*, 
                     strict == 0.3.*,
                     gtk == 0.12.*, 
                     cairo == 0.12.*,
                     monad-coroutine == 0.7.*, 
                     transformers == 0.2.*,
                     xournal-types >= 0.3.2 && < 0.4,
                     xournal-parser >= 0.3.0.2 && < 0.4,
                     xournal-render >= 0.5.1 && < 0.6,
                     xournal-builder >= 0.1.0.2 && < 0.2,
                     containers == 0.4.*,
                     template-haskell == 2.*,
                     bytestring == 0.9.*, 
                     double-conversion == 0.2.*,
                     fclabels == 1.0.*,
                     cmdargs >= 0.7 && <= 0.10,
                     configurator == 0.2.*,
                     poppler == 0.12.*, 
                     time == 1.2.*, 
                     TypeCompose == 0.9.*, 
                     Diff == 0.1.*

  else 
    Build-Depends:   base == 4.*, 
                     mtl == 2.*,
                     directory == 1.*,
                     filepath == 1.*, 
                     strict == 0.3.*,
                     gtk == 0.12.*, 
                     cairo == 0.12.*,
                     monad-coroutine == 0.7.*, 
                     transformers == 0.2.*,
                     xournal-types >= 0.3.1.999 && < 0.4,
                     xournal-parser >= 0.3.0.2 && < 0.4,
                     xournal-render >= 0.5.1 && < 0.6,
                     xournal-builder >= 0.1.0.2 && < 0.2,
                     containers == 0.4.*,
                     template-haskell == 2.*,
                     bytestring == 0.9.*, 
                     double-conversion == 0.2.*,
                     fclabels == 1.0.*,
                     cmdargs >= 0.7 && <= 0.10,
                     configurator == 0.2.*, 
                     time == 1.2.*, 
                     TypeCompose == 0.9.*, 
                     Diff == 0.1.*


  Exposed-Modules: 
                   Application.HXournal.ProgType
                   Application.HXournal.Job
                   Application.HXournal.Command 
                   Application.HXournal.Type
                   Application.HXournal.Type.Alias 
                   Application.HXournal.Type.Event 
                   Application.HXournal.Type.Enum
                   Application.HXournal.Type.Clipboard
                   Application.HXournal.Type.Canvas
                   Application.HXournal.Type.Coroutine
                   Application.HXournal.Type.PageArrangement 
                   Application.HXournal.Type.XournalState
                   Application.HXournal.Type.Window
                   Application.HXournal.Type.Undo 
                   Application.HXournal.Type.Predefined 
                   Application.HXournal.View.Draw
                   Application.HXournal.View.Coordinate
                   Application.HXournal.GUI
                   Application.HXournal.GUI.Menu
                   Application.HXournal.ModelAction.Adjustment
                   Application.HXournal.ModelAction.Pen 
                   Application.HXournal.ModelAction.Page
                   Application.HXournal.ModelAction.Eraser
                   Application.HXournal.ModelAction.Select
                   Application.HXournal.ModelAction.File
                   Application.HXournal.ModelAction.Window
                   -- Application.HXournal.ModelAction.Network
                   Application.HXournal.ModelAction.Layer
                   Application.HXournal.Coroutine
                   Application.HXournal.Coroutine.Callback
                   Application.HXournal.Coroutine.Draw
                   Application.HXournal.Coroutine.EventConnect
                   Application.HXournal.Coroutine.Default
                   Application.HXournal.Coroutine.Pen
                   Application.HXournal.Coroutine.Eraser
                   Application.HXournal.Coroutine.Highlighter
                   Application.HXournal.Coroutine.Scroll
                   Application.HXournal.Coroutine.Page
                   Application.HXournal.Coroutine.Select
                   Application.HXournal.Coroutine.File
                   Application.HXournal.Coroutine.Mode
                   Application.HXournal.Coroutine.Window
                   Application.HXournal.Coroutine.Commit
                   -- Application.HXournal.Coroutine.Network
                   Application.HXournal.Coroutine.Layer
                   Application.HXournal.Util
                   Application.HXournal.Util.Verbatim 
                   Application.HXournal.Device
                   Application.HXournal.Accessor
                   Application.HXournal.Config

  Other-Modules: 
                   Paths_hxournal
  c-sources: 
                   csrc/c_initdevice.c
  include-dirs:    csrc
  install-includes: 
                   csrc/c_initdevice.h
                   csrc/template-hsc-gtk2hs.h

  if flag(poppler)
    cpp-options: -DPOPPLER
