Name:		xournal-builder
Version:	0.1
Synopsis:	text builder for xournal file format 
Description: 	This library builds text xoj format file from xournal data structure
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Text
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/xournal-builder

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*,
                   xournal-types == 0.1.*, 
                   blaze-builder == 0.3.*, 
                   strict == 0.3.*, 
                   double-conversion == 0.2.*, 
                   bytestring == 0.9.*
                 
  Exposed-Modules: 
                   Text.Xournal.Builder
  Other-Modules: 

 
		 