Name:		xournal-parser
Version:	0.1.3.999
Synopsis:       Xournal file parser
Description: 	Xournal file parser
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8



Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, transformers, attoparsec, 
                 attoparsec-iteratee, ListLike,
                 iteratee, iteratee-util, bytestring-lexing, bytestring, 
                 containers, xml-enumerator < 0.4, enumerator, 
                 blaze-builder-enumerator, strict,
                 iteratee-compress==0.2.1.*

  Exposed-Modules: 
                   Text.Xournal.Type
                   Text.Xournal.Parse
                   Text.Xournal.Predefined
                   Text.Xournal.Parse.Enumerator
                   Text.Xournal.Parse.Zlib




 
		 
