Name:		xournal-parser
Version:	0.3.0.0
Synopsis:       Xournal file parser
Description: 	Text parser for xournal xml file
Homepage:       http://ianwookim.org/hxournal
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Text
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Source-repository head
  type: git
  location: http://www.github.com/wavewave/xournal-parser


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 mtl == 2.*, 
                 transformers == 0.2.*, 
                 attoparsec == 0.9.*, 
                 attoparsec-iteratee == 0.3.*, 
                 iteratee >= 0.7 && < 0.9, 
                 bytestring == 0.9.*, 
                 containers == 0.4.*, 
                 xml-enumerator < 0.4, 
                 enumerator >= 0.4.13 && < 0.5, 
                 strict == 0.3.*, 
                 iteratee-compress == 0.2.1.*, 
                 xournal-types >= 0.1 && < 0.3
  Exposed-Modules: 
                   Text.Xournal.Parse
                   Text.Xournal.Parse.Enumerator
                   Text.Xournal.Parse.Zlib



 
		 
