Name:		xournal-render
Version:	0.5.1
Synopsis:       Xournal file renderer
Description: 	Rendering library using cairo for xournal file format
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Graphics
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/xournal-render

Flag Poppler
  Description: Enable poppler support
  Default:     True

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all

  if flag(poppler)
    Build-Depends: base == 4.*, 
                   mtl == 2.*, 
                   containers == 0.4.*, 
                   cairo == 0.12.*, 
                   strict == 0.3.*, 
                   bytestring == 0.9.*,
                   poppler == 0.12.*, 
                   fclabels == 1.0.*, 
                   xournal-types >= 0.3.1 && < 0.4,
                   TypeCompose == 0.9.*
  else
    Build-Depends: base == 4.*, 
                   mtl == 2.*, 
                   containers == 0.4.*, 
                   cairo == 0.12.*, 
                   strict == 0.3.*, 
                   bytestring == 0.9.*,
                   fclabels == 1.0.*, 
                   xournal-types >= 0.3.1 && < 0.4,
                   TypeCompose == 0.9.*


  Exposed-Modules: 
                   Graphics.Xournal.Render.Simple
                   Graphics.Xournal.Render.BBox
                   Graphics.Xournal.Render.Generic
                   Graphics.Xournal.Render.PDFBackground
                   Graphics.Xournal.Render.BBoxMapPDF
                   Graphics.Xournal.Render.HitTest
                   Graphics.Xournal.Render.Type
                   Graphics.Xournal.Render.Type.Hitted
                   Graphics.Xournal.Render.Type.Select

  if flag(poppler)
    cpp-options: -DPOPPLER
                  

