Name:		xournal-types
Version:	0.1
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, bytestring == 0.9.*, strict == 0.3.*
  Exposed-Modules: 
                   Data.Xournal.Generic
                   Data.Xournal.Simple
  Other-Modules: 

 
		 