cabal-version:      2.4
name:               hoodle-build-tools
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ian-Woo Kim
maintainer:         ianwookim@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:     src
  Build-Depends:      base == 4.*,
                      ghc == 8.8.*,
                      transformers
  Exposed-Modules:
                      Plugin.CheckImports

executable checkImports
    main-is:          checkImports.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0,
                      extensions,
                      ghc == 8.8.*,
                      ghc-paths,
                      optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
