Name:		hoodle-builder
Version:	1.0
Synopsis:	text builder for hoodle file format
Description: 	This library builds text xoj format file from hoodle data structure
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Text
Build-Type: 	Simple
Cabal-Version:  2.0
data-files:
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-builder

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -Werror
  ghc-prof-options: -fprof-auto -fprof-cafs
  Build-Depends:
                   base == 4.*,
                   blaze-builder >= 0.3,
                   bytestring >= 0.9,
                   double-conversion >= 0.2.0.6,
                   hoodle-types >= 0.4,
                   microlens >= 0.4,
                   strict >= 0.4,
                   text > 0.11

  Exposed-Modules:
                   Text.Hoodle.Builder
                   Text.Hoodle.Builder.V0_1_1
                   Text.Hoodle.Builder.V0_2_2
                   Text.Hoodle.Builder.V0_3
                   Text.Hoodlet.Builder
  Other-Modules:
