Name:		hoodle-core
Version:	1.0
Synopsis:	Core library for hoodle
Description: 	Hoodle is a pen notetaking program written in haskell.
                hoodle-core is the core library written in haskell and
                using gtk2hs
Homepage:       http://ianwookim.org/hoodle
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 8.6
Build-Type:     Simple
Cabal-Version:  2.0
data-files:     resource/*.css
                resource/*.png
                resource/*.xml
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-core

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -Werror
  ghc-prof-options: -fprof-auto -fprof-cafs

  Build-Depends:   base == 4.*,
                   aeson>=0.7,
                   aeson-pretty > 0.7,
                   array,
                   attoparsec >= 0.10,
                   base64-bytestring >= 0.1,
                   binary,
                   bytestring >= 0.9,
                   cairo >= 0.13.0.3,
                   cereal >= 0.3.5,
                   containers >= 0.4,
                   configurator >= 0.2,
                   coroutine-object,
                   Diff >= 0.3,
                   directory > 1,
                   dyre >= 0.8.11,
                   errors >= 1.3,
                   filepath > 1,
                   fsnotify >= 0.3,
                   gd >= 3000.7,
                   http-types,
                   lens >= 2.5,
                   monad-loops >= 0.3,
                   mtl > 2,
                   network > 2.6,
                   network-info,
                   network-uri > 2.6,
                   network-simple >= 0.3,
                   pango > 0.12,
                   -- poppler >= 0.12.2.2,
                   process >= 1.1,
                   pureMD5,
                   resourcet,
                   stm >= 2,
                   strict > 0.3,
                   svgcairo >= 0.12,
                   system-filepath >= 0.4,
                   template-haskell > 2,
                   text >= 0.10,
                   time >= 1.2,
                   transformers >= 0.3,
                   transformers-free >= 1.0,
                   unordered-containers >= 0.2,
                   uuid >= 1.2.7,
                   vector >= 0.10,
                   gtk3 >= 0.14,
                   --
                   xournal-parser,
                   hoodle-builder,
                   hoodle-parser,
                   hoodle-publish,
                   hoodle-render,
                   hoodle-types,
                   hoodle-util

  Exposed-Modules:
                   Debug.Hoodle.Coroutine.Draw
                   Hoodle.Accessor
                   Hoodle.Config
                   Hoodle.Coroutine.Callback
                   Hoodle.Coroutine.Commit
                   Hoodle.Coroutine.ContextMenu
                   Hoodle.Coroutine.Default
                   Hoodle.Coroutine.Default.Menu
                   Hoodle.Coroutine.Dialog
                   Hoodle.Coroutine.Draw
                   Hoodle.Coroutine.Eraser
                   Hoodle.Coroutine.File
                   Hoodle.Coroutine.Highlighter
                   Hoodle.Coroutine.Layer
                   Hoodle.Coroutine.Link
                   Hoodle.Coroutine.Minibuffer
                   Hoodle.Coroutine.Mode
                   Hoodle.Coroutine.Network
                   Hoodle.Coroutine.Page
                   Hoodle.Coroutine.Pen
                   Hoodle.Coroutine.Scroll
                   Hoodle.Coroutine.Select
                   Hoodle.Coroutine.Select.Clipboard
                   Hoodle.Coroutine.Select.ManipulateImage
                   Hoodle.Coroutine.TextInput
                   Hoodle.Coroutine.LaTeX
                   Hoodle.Coroutine.VerticalSpace
                   Hoodle.Coroutine.Window
                   Hoodle.Device
                   Hoodle.GUI
                   Hoodle.GUI.Menu
                   Hoodle.GUI.Reflect
                   Hoodle.GUIView
                   Hoodle.ModelAction.Adjustment
                   Hoodle.ModelAction.Clipboard
                   Hoodle.ModelAction.ContextMenu
                   Hoodle.ModelAction.Eraser
                   Hoodle.ModelAction.File
                   Hoodle.ModelAction.Layer
                   Hoodle.ModelAction.Network
                   Hoodle.ModelAction.Page
                   Hoodle.ModelAction.Pen
                   Hoodle.ModelAction.Select
                   Hoodle.ModelAction.Select.Transform
                   Hoodle.ModelAction.Text
                   Hoodle.ModelAction.Window
                   Hoodle.Script
                   Hoodle.Script.Coroutine
                   Hoodle.Script.Hook
                   Hoodle.Type
                   Hoodle.Type.Alias
                   Hoodle.Type.Canvas
                   Hoodle.Type.Clipboard
                   Hoodle.Type.Coroutine
                   Hoodle.Type.Enum
                   Hoodle.Type.Event
                   Hoodle.Type.HoodleState
                   Hoodle.Type.PageArrangement
                   Hoodle.Type.Predefined
                   Hoodle.Type.Undo
                   Hoodle.Type.Window
                   Hoodle.Type.Widget
                   Hoodle.Util
                   Hoodle.Util.Verbatim
                   Hoodle.View.Coordinate
                   Hoodle.View.Draw
                   Hoodle.Widget.Clock
                   Hoodle.Widget.Dispatch
                   Hoodle.Widget.Layer
                   Hoodle.Widget.PanZoom
                   Hoodle.Widget.Scroll
  Other-Modules:
                   Paths_hoodle_core
  c-sources:
                   csrc/c_initdevice.c
  include-dirs:    csrc
  install-includes:
                   csrc/c_initdevice.h
                   csrc/template-hsc-gtk2hs.h
  cc-options:      -Wno-error -fPIC -Wno-pointer-to-int-cast -std=gnu99 -DDEBUG
  extra-libraries: X11 Xi dl pthread

