Name:		coroutine-object
Version:	0.3
Synopsis:       Object-oriented programming realization using coroutine 
Description: 	Object-oriented programming realization using coroutine 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Control
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:      
Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base >4 && <5, 
                   mtl>2, 
                   lens >= 2.5,
                   containers >= 0.4,
                   transformers >= 0.3, 
                   transformers-free >= 1.0, 
                   bytestring >= 0.9,
                   safecopy >= 0.6,
                   uuid > 1.2,
                   cereal > 0.3, 
                   either >= 3.1 

  Other-Modules:   
  exposed-modules:
                   Control.Monad.Trans.Crtn
                   Control.Monad.Trans.Crtn.Driver
                   Control.Monad.Trans.Crtn.EventHandler 
                   Control.Monad.Trans.Crtn.Event 
                   Control.Monad.Trans.Crtn.IOActor 
                   Control.Monad.Trans.Crtn.Logger
                   Control.Monad.Trans.Crtn.Logger.Simple  
                   Control.Monad.Trans.Crtn.Object 
                   Control.Monad.Trans.Crtn.Queue 
                   Control.Monad.Trans.Crtn.World




 
