Name:		hoodle-grid
Version:	1.0
Synopsis:	test
Description: 	test
Homepage:       http://ianwookim.org/hoodle
License: 	MIT
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 9.6
Build-Type: 	Simple
Cabal-Version:  2.0
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle

Executable grid
  Main-is:        Main.hs
  hs-source-dirs: app
  ghc-options: -j -Wall -threaded -rtsopts
  Build-Depends:
                  base == 4.*,
                  gi-cairo,
                  gi-cairo-connector >= 0.1.1,
                  gi-cairo-render >= 0.1.2,
                  gi-gdk,
                  gi-gtk,
                  gi-gtk-hs,
                  haskell-gi-base
