Name:		hoodle-builder
Version:	0.4
Synopsis:	text builder for hoodle file format 
Description: 	This library builds text xoj format file from hoodle data structure
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Text
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-builder

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*,
                   blaze-builder >= 0.3, 
                   bytestring >= 0.9, 
                   double-conversion >= 0.2.0.6,
                   hoodle-types >= 0.4,
                   lens >= 2.5,
                   strict >= 0.3, 
                   text > 0.11
                 
  Exposed-Modules: 
                   Text.Hoodle.Builder
                   Text.Hoodle.Builder.V0_1_1
                   Text.Hoodle.Builder.V0_2_2
                   Text.Hoodle.Builder.V0_3
                   Text.Hoodlet.Builder
  Other-Modules: 

 
		 